ajuste en el contenido del correo y swagger
