# docs/swagger.yaml
@@ -302,6 +302,11 @@ paths:
         name: email
         required: true
         type: string
+      - description: Category to subscribe to
+        in: path
+        name: category
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -329,6 +334,11 @@ paths:
       - description: Email address to unsubscribe
         in: path
         name: email
+        required: true
+        type: string
+      - description: Category to subscribe to
+        in: path
+        name: category
         required: true
         type: string
       produces:
